--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "preview": "vite preview",
     "server": "node index.js",
     "start": "node server/index.js",
-    "gen:vapid": "node server/scripts/genVapid.js"
+  "gen:vapid": "node server/scripts/genVapid.js",
+  "mobile:web": "cd mobile/mobile-app && npx expo export -p web",
+  "mobile:web:clean": "powershell -Command \"Remove-Item -Recurse -Force mobile/mobile-app/dist -ErrorAction SilentlyContinue\"",
+  "mobile:web:build": "npm run mobile:web && echo Mobile web build complete",
+  "mobile:dev": "cd mobile/mobile-app && npx expo start",
+  "mobile": "npm run mobile:dev",
+  "build:netlify": "npm run build && npm run mobile:web && node scripts/copy-mobile-to-dist.mjs"
   },
   "dependencies": {
     "@hello-pangea/dnd": "^16.5.0",
@@ -21,6 +27,7 @@
     "crypto-random-string": "^5.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "expo-secure-store": "^14.2.3",
     "express": "^4.18.3",
     "express-async-handler": "^1.2.0",
     "http-status-codes": "^2.3.0",
@@ -32,6 +39,7 @@
     "lucide-react": "^0.344.0",
     "mongoose": "^8.2.0",
     "mongoose-paginate-v2": "^1.9.1",
+    "multer": "^2.0.2",
     "nanoid": "^5.0.6",
     "nodemailer": "^6.9.11",
     "react": "^18.3.1",
@@ -39,7 +47,7 @@
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.1.2",
     "react-fast-marquee": "^1.6.4",
-    "react-hot-toast": "^2.4.1",
+    "react-hot-toast": "^2.6.0",
     "react-i18next": "^14.0.5",
     "react-router-dom": "^6.22.2",
     "recharts": "^2.15.4",
