--- a/package.json
+++ b/package.json
@@ -1,77 +1,63 @@
 {
-  "name": "vite-react-typescript-starter",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "mobile-app",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"vite\" \"nodemon --quiet --watch server --ext js,mjs,cjs,json server/index.js\"",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "server": "node index.js",
-    "start": "node server/index.js",
-  "gen:vapid": "node server/scripts/genVapid.js",
-  "mobile:web": "cd mobile/mobile-app && npx expo export -p web",
-  "mobile:web:clean": "powershell -Command \"Remove-Item -Recurse -Force mobile/mobile-app/dist -ErrorAction SilentlyContinue\"",
-  "mobile:web:build": "npm run mobile:web && echo Mobile web build complete",
-  "mobile:dev": "cd mobile/mobile-app && npx expo start",
-  "mobile": "npm run mobile:dev",
-  "build:netlify": "npm run build && npm run mobile:web && node scripts/copy-mobile-to-dist.mjs"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@hello-pangea/dnd": "^16.5.0",
-    "axios": "^1.6.7",
-    "bcryptjs": "^2.4.3",
-    "concurrently": "^8.2.2",
-    "cors": "^2.8.5",
-    "crypto-random-string": "^5.0.0",
-    "date-fns": "^3.6.0",
-    "dotenv": "^16.4.5",
-    "expo-secure-store": "^14.2.3",
-    "express": "^4.18.3",
-    "express-async-handler": "^1.2.0",
-    "http-status-codes": "^2.3.0",
-    "i18next": "^23.10.0",
-    "i18next-browser-languagedetector": "^7.2.0",
-    "i18next-http-backend": "^2.5.0",
-    "jsonwebtoken": "^9.0.2",
-    "lodash": "^4.17.21",
-    "lucide-react": "^0.344.0",
-    "mongoose": "^8.2.0",
-    "mongoose-paginate-v2": "^1.9.1",
+    "@expo/metro-runtime": "~5.0.4",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-navigation/bottom-tabs": "^7.4.7",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.26",
+    "@react-navigation/stack": "^7.4.8",
+    "@vitalets/google-translate-api": "^9.2.1",
+    "ansi-escapes": "^7.0.0",
+    "axios": "^1.11.0",
+    "expo": "^54.0.1",
+    "expo-av": "~15.1.7",
+    "expo-constants": "~17.1.7",
+    "expo-image-picker": "~15.0.7",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-localization": "~16.1.6",
+    "expo-location": "^18.1.6",
+    "expo-secure-store": "~14.2.4",
+    "expo-status-bar": "~2.2.3",
+    "expo-auth-session": "~7.0.8",
+    "fbjs": "^3.0.5",
+    "i18next": "^23.11.5",
+    "intl-pluralrules": "^2.0.1",
     "multer": "^2.0.2",
-    "nanoid": "^5.0.6",
-    "nodemailer": "^6.9.11",
-    "react": "^18.3.1",
-    "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^18.3.1",
-    "react-error-boundary": "^4.1.2",
-    "react-fast-marquee": "^1.6.4",
-    "react-hot-toast": "^2.6.0",
-    "react-i18next": "^14.0.5",
-    "react-router-dom": "^6.22.2",
-    "recharts": "^2.15.4",
-    "web-push": "^3.6.7",
-    "ws": "^8.18.3",
-    "xlsx": "^0.18.5",
-    "zod": "^3.22.4"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-i18next": "^15.0.1",
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-localize": "^3.5.2",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated-carousel": "^4.0.3",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-web": "^0.20.0",
+    "terminal-link": "^4.0.0"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.202",
-    "@types/react": "^18.2.56",
-    "@types/react-beautiful-dnd": "^13.1.8",
-    "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "nodemon": "^3.1.10",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.4"
-  }
+    "@babel/core": "^7.25.2",
+    "@react-native/dev-middleware": "0.79.5",
+    "@types/react": "~19.0.10",
+    "@types/react-native": "^0.72.8",
+    "babel-preset-expo": "~13.0.0",
+    "typescript": "~5.8.3"
+  },
+  "private": true,
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
