--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,11 @@
   publish = "dist"
   # Environment vars (VITE_API_BASE, EXPO_PUBLIC_API_URL, MOBILE_WEB_TABLET_POLICY) set in Netlify UI.
 
+[build.environment]
+  NODE_VERSION = "20.11.1"
+  NPM_VERSION = "10.5.0"
+  NPM_FLAGS = "--ignore-scripts=false"
+
 [[edge_functions]]
   function = "device-redirect"
   path = "/*"
