Initialize new repo omranholyga1 (migrated)

--- a/package.json
+++ b/package.json
@@ -3,13 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "engines": {
-    "node": "20.x"
-  },
   "scripts": {
     "dev": "concurrently \"vite\" \"nodemon --quiet --watch server --ext js,mjs,cjs,json server/index.js\"",
-  "build": "tsc && vite build",
-  "build:fast": "vite build",
+    "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "server": "node index.js",
@@ -20,7 +16,7 @@
   "mobile:web:build": "npm run mobile:web && echo Mobile web build complete",
   "mobile:dev": "cd mobile/mobile-app && npx expo start",
   "mobile": "npm run mobile:dev",
-  "build:netlify": "npm run build:fast && npm run mobile:web && node scripts/copy-mobile-to-dist.mjs"
+  "build:netlify": "npm run build && npm run mobile:web && node scripts/copy-mobile-to-dist.mjs"
   },
   "dependencies": {
     "@hello-pangea/dnd": "^16.5.0",
