--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=18 <21"
+  },
   "scripts": {
     "dev": "concurrently \"vite\" \"nodemon --quiet --watch server --ext js,mjs,cjs,json server/index.js\"",
     "build": "tsc && vite build",
