--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,7 @@
 # Force a stable Node version (Rollup optional native package bug appears on Node 22 build image)
 [build.environment]
   NODE_VERSION = "20"
+  ROLLUP_SKIP_NODEJS_NATIVE = "1"
 
 [[edge_functions]]
   function = "device-redirect"
