--- a/package.json
+++ b/package.json
@@ -73,7 +73,9 @@
     "nodemon": "^3.1.10",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.4"
+  "typescript": "^5.2.2",
+  "vite": "^5.1.4",
+  "rollup": "^4.21.0",
+  "@rollup/rollup-linux-x64-gnu": "^4.21.0"
   }
 }
